# TeskaLab_Assignment

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  models.py  parser.py  schema.sql  writer.py
