[project]
name = "tl-assignment"
version = "0.1.0"
description = "Solution for TeskaLabs assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.7.0",
    "pydantic>=2.9.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
    "pyarrow>=17.0.0"
]
